Turned Ghost into an Object with methods, and implmented a lives lost feature

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>PacMan-Clone</title>
 </head>
 <body>
-    <div class='UI'>
-        <div id ='score'></div>
-        <div id ='lives'></div>
-    </div>
-    <div id="grid-container">
-        <div id="grid"></div>
+    <div class="arcade-machine">
+        <h1>PacMan</h1>
+        <div class='UI'>
+            <div id ='score'>Score: 0</div>
+            <div id ='lives'>Lives: ❤️ ❤️ ❤️ </div>
+        </div>
+            <div id="grid-container">
+                <div id="grid"></div>
+        </div>
     </div>
 </body>
