Added ambusher ghost, with pathfinding ahead of pacman, and updated styling to include a (sub)header

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css"/>
+    <link rel="stylesheet" href="./css/main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Russo+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Audiowide&family=Bangers&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Luckiest+Guy&display=swap"
+        rel="stylesheet">
     <script src="./scripts/app.js"></script>
     <title>PacMan-Clone</title>
 </head>
+
 <body>
     <div class="arcade-machine">
-        <h1>PacMan</h1>
+        <h1>DotMan</h1>
+        <h2>A Bootleg PacMan Adventure!</h2>
         <div class='UI'>
-            <div id ='score'>Score: 0</div>
-            <div id ='lives'>Lives: ❤️ ❤️ ❤️ </div>
+            <div id='score'>Score: 0</div>
+            <div id='lives'>Lives: ❤️ ❤️ ❤️ </div>
         </div>
-            <div id="grid-container">
-                <div id="grid"></div>
+        <div id="grid-container">
+            <div id="grid"></div>
         </div>
     </div>
 </body>
