--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <script src="./scripts/app.js"></script>
     <title>PacMan-Clone</title>
 </head>
-
 <body>
     <div class="arcade-machine">
         <h1>DotMan</h1>
         <h2>A Bootleg PacMan Adventure!</h2>
+        <div class="game-bio">
+            <p></p>
+        </div>
         <div class='UI'>
             <div id='score'>Score: 0</div>
             <div id='lives'>Lives: ❤️ ❤️ ❤️ </div>
