Added start button, and used media query's to ensure game bio div mataches the size of the grid across laptops and monitors

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
                 <p>Keep an eye out for <span class="special-text" id="power-pellet-text">Power Pellets</span>. These special squares turn DotMan a birght cyan for 10 seconds, giving him the chance to chase down the ghosts and score extra points.</p>
 
+                <p>Click below to insert your quarter and start the adventure!</p>
+
+                <button id="start-game">Start Game</button>
+
             </div>
             
             <div id="grid-container">
