Fixed reset game bug around pellet numbers not being reset when the game is restarted by the player, by adding a resetPellets function to the callstack initiated by the reset game function.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Russo+One&family=Audiowide&family=Bangers&family=Lato:wght@100;300;400;700;900&family=Luckiest+Guy&family=Poppins:wght@100;400;700&display=swap"
         rel="stylesheet">
     <script src="./scripts/app.js"></script>
-    <title>PacMan-Clone</title>
+    <title>DotMan: A PacMan Adventure</title>
 </head>
 
 <body>
