feat: streamline UI with responsive layout and game state transitions

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <p> Navigate the Maze by using your arrow keys to guide DotMan through the labyrinth. Once all the pellets have been gobbled up, you have beaten the game. But beware the ghosts, getting caught by one will decrease your score, so stay sharp and avoid their clutches. </p>
 
-                <p>Keep an eye out for <span class="special-text" id="power-pellet-text">Power Pellets</span>. These special squares turn DotMan a birght cyan for 10 seconds, giving him the chance to chase down the ghosts and score extra points.</p>
+                <p>Keep an eye out for <span class="special-text" id="power-pellet-text">Power Pellets</span>. These special squares turn DotMan a bright cyan for 10 seconds, giving him the chance to chase down the ghosts and score extra points.</p>
 
                 <p>Click below to insert your quarter and start the adventure!</p>
 
