feat: add mobile-responsive layout with swipe controls and UI scaling || docs: update README with mobile enhancements and swipe controls

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
                         unpredictable threat to DotMan.</li>
                 </ul>
 
-                <p> Navigate the Maze by using your arrow keys to guide DotMan through the labyrinth. Once all the pellets have been gobbled up, you have beaten the game. But beware the ghosts, getting caught by one will decrease your score, so stay sharp and avoid their clutches. </p>
+                <p> Navigate the Maze by using your arrow keys on your computer, or swiping on your mobile, to guide DotMan through the labyrinth. Once all the pellets have been gobbled up, you have beaten the game. But beware the ghosts, getting caught by one will decrease your score, so stay sharp and avoid their clutches. </p>
 
                 <p>Keep an eye out for <span class="special-text" id="power-pellet-text">Power Pellets</span>. These special squares turn DotMan a bright cyan for 10 seconds, giving him the chance to chase down the ghosts and score extra points.</p>
 
